--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "http-errors": "^1.6.3",
     "morgan": "^1.9.0",
+    "ng2-adsense": "^5.3.0",
     "pug": "^2.0.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
