--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/router": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angulartics2": "^6.0.0",
+    "bootstrap": "^4.1.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "http-errors": "^1.6.3",
     "morgan": "^1.9.0",
     "ng2-adsense": "^5.3.0",
+    "ngx-bootstrap": "^3.0.0",
     "pug": "^2.0.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
