--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "angularfire2": "^5.0.0-rc.10",
     "angulartics2": "^6.0.0",
     "bootstrap": "^4.1.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "firebase": "^5.0.4",
     "http-errors": "^1.6.3",
     "morgan": "^1.9.0",
     "ng2-adsense": "^5.3.0",
