--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@google-cloud/datastore": "^1.4.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angularfire2": "^5.0.0-rc.10",
     "angulartics2": "^6.0.0",
@@ -30,6 +31,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
+    "gstore-node": "^4.2.1",
     "http-errors": "^1.6.3",
     "morgan": "^1.9.0",
     "ng2-adsense": "^5.3.0",
