--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.launch
 .settings/
 *.sublime-workspace
+.env
 
 # IDE - VSCode
 .vscode/*
@@ -34,6 +35,7 @@ yarn-error.log
 testem.log
 /typings
 /environments
+/keys
 
 # System Files
 .DS_Store
