--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.1.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
     "gstore-node": "^4.2.1",
@@ -37,6 +38,7 @@
     "ng2-adsense": "^5.3.0",
     "ngx-bootstrap": "^3.0.0",
     "pug": "^2.0.3",
+    "raven": "^2.6.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
