--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "footy-app",
   "version": "0.0.0",
   "scripts": {
+    "start": "node ./bin/www",
     "ng": "ng",
-    "start": "ng serve",
+    "ngstart": "ng serve --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
