--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pug": "^2.0.3",
     "raven": "^2.6.2",
     "raven-js": "^3.25.2",
+    "request-promise": "^4.2.2",
     "rxjs": "^6.0.0",
     "winston": "^2.4.2",
     "winston-loggly-bulk": "^2.0.2",
