--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "../dist/all/@angular",
+    //"outDir": "../dist/all/@angular",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
@@ -21,6 +21,7 @@
     ]
   },
   "include": [
+    "footVerseWeb/**/*",
     "src/**/*",
     "node_modules/@types"
    ]
