--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.16.3",
     "firebase": "^5.0.4",
     "gstore-node": "^4.2.1",
+    "guid-typescript": "^1.0.7",
     "http-errors": "^1.6.3",
     "morgan": "^1.9.0",
     "ng2-adsense": "^5.3.0",
